Bug 11199 - The timeout command in rpcclient doesn't work
Summary: The timeout command in rpcclient doesn't work
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Tools (show other bugs)
Version: 4.2.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andreas Schneider
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-07 14:17 UTC by Andreas Schneider
Modified: 2016-05-23 21:14 UTC (History)
3 users (show)

See Also:


Attachments
patch for master (1.63 KB, patch)
2015-04-07 14:18 UTC, Andreas Schneider
no flags Details
patch for 4.2 (9.10 KB, patch)
2015-04-08 14:05 UTC, Andreas Schneider
no flags Details
patch for 4.2 (1.97 KB, patch)
2015-04-09 15:19 UTC, Andreas Schneider
asn: review? (metze)
Details
patch for 4.1 (1.94 KB, patch)
2015-04-09 15:20 UTC, Andreas Schneider
asn: review? (metze)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2015-04-07 14:17:12 UTC
The timeout command in rpcclient doesn't work. A timeout is only set if you executed the command. But if want to run a command which times out the connection isn't working:

Reproducer:
for i in $(seq -w 0 1200); do lpadmin -p "smb_printer$i" -E -v /dev/null; done

rpcclient //localhost -c 'timeout 90000;enumprinters'

Patch follows ...
Comment 1 Andreas Schneider 2015-04-07 14:18:13 UTC
Created attachment 10934 [details]
patch for master
Comment 2 Andreas Schneider 2015-04-08 14:05:38 UTC
Created attachment 10935 [details]
patch for 4.2
Comment 3 Andreas Schneider 2015-04-09 15:19:33 UTC
Created attachment 10942 [details]
patch for 4.2
Comment 4 Andreas Schneider 2015-04-09 15:20:57 UTC
Created attachment 10943 [details]
patch for 4.1
Comment 5 Christian Ambach 2016-05-23 21:14:12 UTC
Fix has already landed in 4.3 and 4.4.